# har_flow_recorder

./: .gitignore  CHANGELOG.md  CONTINUOUS_TRANSCRIPTION_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.sh  run_dev.sh  setup.py
scripts/: __init__.py  audio_narrator.py  browser_recorder.py  cli.py  config.py  recording_manager.py  test_cleanup.py
scripts/enumeration/: phase1_fix_summary.md  phase1_hypotheses.md  pwr_enum_all_in_one.py  requirements.txt
tests/: __init__.py  test_cli.py  test_config.py
